--- a/introduction.css
+++ b/introduction.css
@@ -1,5 +1,9 @@
 body {
     background-color: blueviolet;
+    margin: 0px;
+    overflow-y: auto;
+    overflow-x: hidden;
+
 }
 
 canvas {
@@ -8,14 +12,18 @@ canvas {
     user-select: none;
 }
 
+#buttons {
+    display: flex;
+    flex-direction: row;
+}
+
 .tool {
     width: 50px;
     height: 50px;
     padding: 0px 0px 0px 0px;
-    margin-bottom: 5px;
+    -webkit-border-radius: 0px;
     vertical-align: middle;
     display: inline-block;
-    -webkit-border-radius: 0px;
     border-radius: 0;
     border-width: 3px;
 
