--- a/introduction.css
+++ b/introduction.css
@@ -2,14 +2,18 @@ body {
     background-color: blueviolet;
     margin: 0px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
 
 }
 
 canvas {
-    background-color: aliceblue;
+    background-color: whitesmoke;
     cursor: crosshair;
     user-select: none;
+    position: absolute;
+    top: 50px;
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
 }
 
 #buttons {
@@ -26,5 +30,29 @@ canvas {
     display: inline-block;
     border-radius: 0;
     border-width: 3px;
+
+}
+
+.tool:hover {
+    background-color: bisque;
+    border-color: purple;
+}
+
+#colors {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: absolute;
+    width: 200px;
+    right: 0px;
+    top: 0px;
+
+}
+
+.color {
+    width: 25px;
+    height: 25px;
+    border-width: 1px;
+    border-radius: 0px;
 
 }
