--- a/introduction.css
+++ b/introduction.css
@@ -36,13 +36,13 @@ canvas {
     display: inline-block;
     border-radius: 0;
     border-width: 3px;
+    border-color: black;
 
 }
 
 
 .tool:hover {
-    background-color: bisque;
-    border-color: purple;
+    background-color: gray;
 }
 
 
@@ -57,33 +57,62 @@ canvas {
     z-index: 2;
 }
 
-#sub-menu {
+#current-color {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    right: 200px;
+    top: 0px;
+    z-index: 3;
+    background-color: black;
+    border-width: 1px;
+    border-radius: 0px;
+}
+
+#color-menu {
+    display: none;
+    background-color: white;
+    width: 100px;
+    height: 100px;
+    right: 175px;
+    top: 55px;
+    position: fixed;
+    z-index: 2;
+    border-color: black;
+    border-radius: 5px;
+    border-width: 5px;
+
+}
+
+.sub-menu {
     display: flex;
+    border-width: 5px;
+    border-color: black;
     flex-direction: column;
     flex-wrap: wrap;
     position: fixed;
     width: 40px;
+    height: 20%;
     right: 0px;
-    top: 30%;
+    top: 40%;
     z-index: 2;
 }
 
 .sub-tool {
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 25%;
     padding: 0px 0px 0px 0px;
     -webkit-border-radius: 0px;
     border-radius: 0;
     border-width: 3px;
-
+    border-color: black;
 }
 
 .color {
-    width: 25px;
+    width: 12.5%;
     height: 25px;
     border-width: 1px;
     border-radius: 0px;
-
 }
 
 .upload {
